--- a/src/TagzApp.Blazor.Client/Components/Pages/MessageDetails.razor
+++ b/src/TagzApp.Blazor.Client/Components/Pages/MessageDetails.razor
@@ -1,6 +1,5 @@
 ﻿@using TagzApp.ViewModels.Data
-@using Microsoft.AspNetCore.SignalR.Client
-@using Humanizer
+@using Humanizer;
 
 @if (Model is not null)
 {
@@ -123,74 +122,4 @@
 		<div class="modal-backdrop fade show"></div>
 	}
 
-}
-
-@code {
-
-	[Parameter]
-	public ModerationContentModel Model { get; set; }
-
-	[CascadingParameter]
-	public Components.Pages.Moderation ModerationPage { get; set; }
-
-	private string ValidationMessage { get; set; }
-
-	private string modalDisplay = "block";
-	private string modalClass = "fade";
-	private bool showBackdrop = true;
-	private string _InnerModalCssClass = string.Empty;
-
-	public bool AddedToQueue { get; set; } = false;
-
-	protected override async Task OnInitializedAsync()
-	{
-
-		await Task.Delay(300).ContinueWith(async _ =>
-
-		{
-
-			modalClass = "show";
-
-			await InvokeAsync(StateHasChanged);
-		});
-
-		await base.OnInitializedAsync();
-	}
-
-	async Task BlockUser()
-	{
-
-		await ModerationPage._Connection.InvokeAsync("BlockUser", Model.AuthorUserName, Model.Provider);
-
-		ValidationMessage = $"User {Model.AuthorUserName} has been blocked on {Model.Provider.ToLowerInvariant().Humanize(LetterCasing.Title)}";
-
-	}
-
-		async Task UpdateMessageOnQueue()
-		{
-
-			// TODO: Add to the queue somewhere
-
-
-		}
-
-	public async Task Open()
-	{
-
-		modalDisplay = "block";
-		modalClass = "show";
-		showBackdrop = true;
-		StateHasChanged();
-
-	}
-
-
-	public void Close()
-	{
-		modalDisplay = "none";
-		modalClass = string.Empty;
-		showBackdrop = false;
-		_InnerModalCssClass = string.Empty;
-		StateHasChanged();
-	}
 }
