--- a/src/TagzApp.Blazor.Client/Components/Pages/Moderation.razor
+++ b/src/TagzApp.Blazor.Client/Components/Pages/Moderation.razor
@@ -2,6 +2,7 @@
 @rendermode @(new InteractiveWebAssemblyRenderMode(false))
 @attribute [Authorize(policy: "Moderator")]
 @implements IAsyncDisposable
+@implements IHasSignalRConnection
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using Microsoft.AspNetCore.SignalR.Client
@@ -95,6 +96,9 @@
 
 <CascadingValue Value="this">
 	<MessageDetails @ref="MessageDetailsDialog" Model="SelectedContent" />
+
+	<MessageQueueDrawer />
+
 </CascadingValue>
 
 @code {
@@ -137,7 +141,7 @@
 		}
 	}
 
-	internal HubConnection _Connection;
+	public HubConnection Connection { get; set; }
 
 	string _Tag = string.Empty;
 
@@ -148,15 +152,15 @@
 
 		await ConfigureSignalRConnection();
 
-		_Tag = (await _Connection.InvokeAsync<string[]>("GetTags"))?.First();
+		_Tag = (await Connection.InvokeAsync<string[]>("GetTags"))?.First();
 
 
-		BlockedUserCount = await _Connection.InvokeAsync<int>("GetBlockedUserCount");
+		BlockedUserCount = await Connection.InvokeAsync<int>("GetBlockedUserCount");
 
-		_Providers = await _Connection.InvokeAsync<IEnumerable<AvailableProvider>>("GetAvailableProviders");
+		_Providers = await Connection.InvokeAsync<IEnumerable<AvailableProvider>>("GetAvailableProviders");
 		_FilteredProviders = _Providers.Select(p => p.Id).ToList();
 
-		_Moderators = (await _Connection.InvokeAsync<NewModerator[]>("GetCurrentModerators")).ToHashSet();
+		_Moderators = (await Connection.InvokeAsync<NewModerator[]>("GetCurrentModerators")).ToHashSet();
 
 		await base.OnInitializedAsync();
 
@@ -173,20 +177,20 @@
 	async Task ConfigureSignalRConnection()
 	{
 
-		_Connection = new HubConnectionBuilder()
+		Connection = new HubConnectionBuilder()
 						.WithUrl(NavigationManager.ToAbsoluteUri("/mod"))
 					.Build();
 
 		await ListenForModerationContent();
 
-		await _Connection.StartAsync();
+		await Connection.StartAsync();
 
 	}
 
 	async Task ListenForModerationContent()
 	{
 
-		_Connection.On<ContentModel>("NewWaterfallMessage", async (content) =>
+		Connection.On<ContentModel>("NewWaterfallMessage", async (content) =>
 		{
 
 			if (!_FilteredProviders.Any(c => c.Equals(content.Provider, StringComparison.InvariantCultureIgnoreCase))) return;
@@ -206,9 +210,9 @@
 			await InvokeAsync(StateHasChanged);
 		});
 
-		_Connection.On<ModerationContentModel>("NewApprovedMessage", HandleApprovedMessage);
+		Connection.On<ModerationContentModel>("NewApprovedMessage", HandleApprovedMessage);
 
-		_Connection.On<ModerationContentModel>("NewRejectedMessage", async (content) =>
+		Connection.On<ModerationContentModel>("NewRejectedMessage", async (content) =>
 		{
 
 			if (ThePauseButton.IsPaused)
@@ -242,19 +246,19 @@
 
 		});
 
-		_Connection.On<int>("NewBlockedUserCount", async (newCount) =>
+		Connection.On<int>("NewBlockedUserCount", async (newCount) =>
 		{
 			BlockedUserCount = newCount;
 			await InvokeAsync(StateHasChanged);
 		});
 
-		_Connection.On<NewModerator>("NewModerator", async (moderator) =>
+		Connection.On<NewModerator>("NewModerator", async (moderator) =>
 		{
 			_Moderators.Add(moderator);
 			await InvokeAsync(StateHasChanged);
 		});
 
-		_Connection.On<string>("RemoveModerator", async (moderatorEmail) =>
+		Connection.On<string>("RemoveModerator", async (moderatorEmail) =>
 		{
 			var thisMod = _Moderators.FirstOrDefault(m => m.Email.Equals(moderatorEmail, StringComparison.InvariantCultureIgnoreCase));
 			if (thisMod is not null)
@@ -302,7 +306,7 @@
 	{
 
 		var approvalStatus = (int)_FilterApprovalStatus;
-		var currentContent = (await _Connection.InvokeAsync<IEnumerable<ModerationContentModel>>("GetFilteredContentByTag", _Tag, _FilteredProviders.ToArray(), approvalStatus.ToString()))
+		var currentContent = (await Connection.InvokeAsync<IEnumerable<ModerationContentModel>>("GetFilteredContentByTag", _Tag, _FilteredProviders.ToArray(), approvalStatus.ToString()))
 			.ToArray();
 
 		foreach (var content in currentContent.OrderByDescending(c => c.Timestamp).ToArray())
@@ -315,7 +319,7 @@
 	public async Task Moderate(ModerationAction action)
 	{
 
-		await _Connection.InvokeAsync("SetStatus", action.Provider, action.ProviderId, action.State);
+		await Connection.InvokeAsync("SetStatus", action.Provider, action.ProviderId, action.State);
 		// TODO: Tag message appropriately to indicate moderation state
 
 	}
@@ -384,9 +388,9 @@
 	public async ValueTask DisposeAsync()
 	{
 
-		if (_Connection is not null)
+		if (Connection is not null)
 		{
-			await _Connection.DisposeAsync();
+			await Connection.DisposeAsync();
 		}
 
 	}
