First steps in building the desktop app

--- a/src/TagzApp.Blazor/Components/Pages/Home.razor
+++ b/src/TagzApp.Blazor/Components/Pages/Home.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@inject ApplicationConfiguration AppConfig
+@* @inject ApplicationConfiguration AppConfig *@
 
 <PageTitle>Home</PageTitle>
 
@@ -7,7 +7,7 @@
 
 Welcome to your new app.
 
-
+@* 
 @code {
 
 	[CascadingParameter]
@@ -15,3 +15,4 @@ Welcome to your new app.
 
 
 }
+ *@
