Added initial menubar

--- a/src/TagzApp.Standalone/Components/Layout/MainLayout.razor
+++ b/src/TagzApp.Standalone/Components/Layout/MainLayout.razor
@@ -16,6 +16,8 @@
 
 <SectionOutlet SectionName="scripts"  />
 
+<Navigator />
+
 @code {
 
 	public bool IsConfigured => ConfigureTagzAppFactory.IsConfigured;
