--- a/src/TagzApp.Standalone/MainPage.xaml
+++ b/src/TagzApp.Standalone/MainPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:TagzApp.Standalone"
+						 xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="TagzApp.Standalone.MainPage"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
 
